2005-09-22  Wim Taymans  <wim@fluendo.com>

	* gst/playback/gstplaybin.c: (gst_play_bin_class_init),
	(gst_play_bin_send_event):
	Only seek on one sink, the first one that succeeds.

2005-09-22  Michael Smith <msmith@fluendo.com>

	* ext/vorbis/vorbisenc.c: (gst_vorbisenc_clear),
	(gst_vorbisenc_sink_event), (gst_vorbisenc_change_state):
	Don't flush encoder state unless we have an initialised encoder.
	Clear out encoder state on PAUSED_TO_READY.

2005-09-22  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/rtp/gstbasertppayload.c:
	(gst_basertppayload_class_init), (gst_basertppayload_init),
	(gst_basertppayload_setcaps), (gst_basertppayload_chain),
	(gst_basertppayload_set_options), (gst_basertppayload_set_outcaps),
	(gst_basertppayload_is_filled), (gst_basertppayload_push),
	(gst_basertppayload_set_property),
	(gst_basertppayload_get_property),
	(gst_basertppayload_change_state):
	* gst-libs/gst/rtp/gstbasertppayload.h:
	Added max-ptime to control amount of data in the rtp packets.

2005-09-21  Andy Wingo  <wingo@pobox.com>

	* gst/playback/gstplaybasebin.c: Attempt to fix up buffer probe
	thingies.

	* gst/playback/gstdecodebin.c (gst_decode_bin_dispose): Dispose
	can be called multiple times, dogs.

2005-09-21  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/rtp/gstbasertppayload.c:
	(gst_basertppayload_class_init), (gst_basertppayload_init),
	(gst_basertppayload_setcaps), (gst_basertppayload_chain),
	(gst_basertppayload_set_options), (gst_basertppayload_set_outcaps),
	(gst_basertppayload_push), (gst_basertppayload_get_property),
	(gst_basertppayload_change_state):
	Allow 0 ssrc too.

2005-09-21  Stefan Kost  <ensonic@users.sf.net>

	* docs/libs/compiling.sgml:
	  fixing typos

2005-09-20  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/rtp/gstbasertppayload.c:
	(gst_basertppayload_class_init), (gst_basertppayload_init),
	(gst_basertppayload_setcaps), (gst_basertppayload_chain),
	(gst_basertppayload_set_options), (gst_basertppayload_set_outcaps),